--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -12,6 +12,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/blog/">Посты</a>
     </nav>
 </div>
 
@@ -23,7 +24,7 @@
 {% block content %}
 {% endblock %}
 
-{% include '../includes/inc_main_menu.html' %}
+{% include '../catalog/includes/inc_main_menu.html' %}
 
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
