--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -3,7 +3,11 @@
 {% block content %}
 
 <div class="container">
-    <div class="row">
+
+    <div class="col-12">
+        <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить продукт</a>
+    </div>
+        <div class="row">
         {% for product in products %}
         <div class="col-md-4 mb-4">
             <div class="card mb-4 box-shadow">
