--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,24 +1,38 @@
-{% extends "catalog/base.html" %}
-{%  load filters %}
+{% extends 'catalog/base.html' %}
+{% load mediapath_tag %}
 
 {% block content %}
-  <div class="container">
+
+<div class="container mt-4">
     <div class="row">
-        <div class="col-md-4 mb-4">
-            <div class="card mb-4 box-shadow">
-              <img src="{{ product.image|mymedia }}" alt="Image description">
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">{{ product.description|truncatechars:100 }}</p>
-                    <ul class="list-unstyled mt-3 mb-4">
-                        <li><b>Цена:</b> {{ product.price_per_unit }}</li>
-                        <li><b>Категория:</b> {{ product.category }}</li>
-                        <li><b>Дата создания:</b> {{ product.created_at }}</li>
-                    </ul>
-                    <button type="button" class="btn btn-primary btn-block">Купить</button>
-                </div>
+        <div class="col-md-6">
+            {% if product.image %}
+                <img src="{{ product.image.url }}" alt="Product Image" class="img-fluid">
+            {% else %}
+                <p>No image available</p>
+            {% endif %}
+        </div>
+        <div class="col-md-6">
+            <h2 class="display-4">{{ product.name }}</h2>
+            <p class="lead">{{ product.description }}</p>
+            <p class="lead">Цена: ${{ product.price_per_unit }}</p>
+            <p class="lead">Категория: {{ product.category }}</p>
+            <p class="lead">Дата добавления: {{ product.created_at }} </p>
+
+            {% if version  %}
+                <p class="lead">Текущая версия: {{ version.version_number }}</p>
+                <a href="{% url 'catalog:version-detail' version.id %}" class="btn btn-primary btn-lg btn-block">Посмотреть версию продукта</a>
+            {% else %}
+                <a href="{% url 'catalog:version-form' pk=product.pk %}" class="btn btn-primary btn-lg btn-block">Добавить версию продукта</a>
+            {% endif %}
+
+            <div class="mt-4">
+                <a href="{% url 'catalog:product_detail' product.id %}" class="btn btn-secondary btn-lg btn-block">Добавить в корзину</a>
             </div>
         </div>
     </div>
 </div>
+
+
+
 {% endblock %}
