--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -13,6 +13,15 @@
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="/blog/ ">Посты</a>
+        {% if user.is_authenticated %}
+        <form method="post" action="{% url 'user:logout' %}">
+            {% csrf_token %}
+            <button type="submit" class="p-2 btn btn-outline-primary">Logout</button>
+        </form>
+    {% else %}
+        <a class="p-2 btn btn-outline-primary" href="{% url 'user:login' %}">Login</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'user:register' %}">Registration</a>
+    {% endif %}
     </nav>
 </div>
 
